fix: reduce paragraph spacing in untutorial editor
Added margin-bottom: 0.5em to paragraphs in the Quill editor to reduce
the visual spacing when pressing Enter. This creates more compact line
breaks between paragraphs.

--- a/src/components/Untutorial/untutorial.scss
+++ b/src/components/Untutorial/untutorial.scss
@@ -46,4 +46,12 @@
 
 #untutorial .ql-editor {
   padding-top: 0;
+
+  p {
+    margin-bottom: 0.5em;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
